--- a/resource/templates/resource/showposts.html
+++ b/resource/templates/resource/showposts.html
@@ -1,52 +1,25 @@
-<!DOCTYPE html>
+{%extends "resource/template.html"%}
 
-<head>
-    <title>资源大区优质主题统计 </title>
-    <style>
-        #display {
-            width: 100%; 
-            min-height: 100%;
-            justify-content: center; 
-        }
+{%block body%}
 
-        #main {
-            width: 90%;
-            text-align: center; 
-            border-collapse:collapse; 
-        } 
+<div id="display">
+    <h1>苦力怕论坛资源大区优质主题列表</h1>
+    <table id="main">
+        <thead>
+            <td>主题类型 </td>
+            <td>主题等级 </td> 
+            <td>标题 </td>
+            <td>操作</td>
+        </thead> 
+        {%for th in t%}
+        <tr style="border-top: 1px soild #ddd"> 
+            <td>{{th.postType}}[{{th.postType.board}}] </td>
+            <td>{{th.stamp}} </td> 
+            <td>{{th.title}}</td>
+            <td><a href="https://klpbbs.com/thread-{{th.tid}}-1-1.html"><button>前往主题</button></a></td>
+        </tr>
+        {%endfor%}
+    </table>
+</div> 
 
-        #main thead td { 
-            background: rgb(200, 200, 200); 
-            font-size: 1em; 
-            font-weight: bold; 
-        } 
-
-        #main tr { 
-            background: white; 
-            font-size: 1em; 
-
-        } 
-    </style>
-</head>
-
-<body>
-    <div id="display"> 
-        <h1>苦力怕论坛资源大区优质主题列表</h1> 
-        <table id="main">
-            <thead>
-                <td>主题类型 </td>
-                <td>主题链接 </td>
-                <td>主题等级 </td>
-            </thead>
-            {%for th in t%}
-            <tr>
-                <td>{{th.postType}} </td>
-                <td><a href="https://klpbbs.com/thread-{{th.tid}}-1-1.html">{{th.title}}</a></td>
-                <td>{{th.stamp}} </td> 
-            </tr>
-            {%endfor%}
-        </table>
-    </div>
-</body>
-
-</html> 
+{%endblock%}  
