--- a/resource/templates/resource/template.html
+++ b/resource/templates/resource/template.html
@@ -4,12 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <title>苦力怕论坛资源大区优质主题列表</title>
-    <!-- <link rel="stylesheet" type="text/css" href="main.css"> --> 
+    <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
     <style>
+        #header h1 {
+            font-weight: lighter
+        }
+
+        #header button {
+            height: 2.5em;
+            font-size: 0.45em;
+            font-weight: lighter;
+            border: 1px solid #20A53A;
+            background-color: #ffffff;
+            color: #20A53A;
+            border-radius: 0.39em;
+        }
+
+        #header button:hover {
+            font-weight: lighter;
+            background-color: #20A53A;
+            color: #ffffff;
+        } 
+
         #display {
             width: 100%;
             min-height: 100%;
             justify-content: center;
+        }
+
+        #header {
+            width: 90%;
+            border-collapse: collapse;
         }
 
         #main {
@@ -29,23 +54,23 @@
         }
 
         #main td {
-            padding: 5px 15px; 
+            padding: 5px 15px;
         }
 
         #main button {
             height: 2em;
             font-size: 0.9em;
             font-weight: lighter;
-            border: 1px solid #20A53A; 
-            background-color: #ffffff; 
-            color: #20A53A; 
-            border-radius: 0.39em; 
-        } 
+            border: 1px solid #20A53A;
+            background-color: #ffffff;
+            color: #20A53A;
+            border-radius: 0.39em;
+        }
 
-        #main button:hover { 
-            font-weight: lighter; 
-            background-color: #20A53A; 
-            color: #ffffff; 
+        #main button:hover {
+            font-weight: lighter;
+            background-color: #20A53A;
+            color: #ffffff;
         } 
     </style>
 </head>
@@ -56,4 +81,4 @@
     {%endblock%}
 </body>
 
-</html>
+</html> 
